[gd_scene load_steps=5 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ponderadasemana3.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 626.0
margin_top = 392.0
margin_right = 868.0
margin_bottom = 456.0
text = "Botão para ver itens da lista"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 77.0
margin_top = 214.0
margin_right = 338.0
margin_bottom = 373.0

[node name="Texto" type="Label" parent="."]
margin_left = 458.0
margin_top = 73.0
margin_right = 726.0
margin_bottom = 104.0
theme = SubResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 84.0
margin_top = 396.0
margin_right = 323.0
margin_bottom = 460.0
text = "Botão para adicionar novas palavras"

[node name="Label" type="Label" parent="."]
margin_left = 458.0
margin_top = 73.0
margin_right = 498.0
margin_bottom = 89.0

[node name="Button3" type="Button" parent="."]
margin_left = 334.0
margin_top = 487.0
margin_right = 607.0
margin_bottom = 557.0
text = "Botão para ver a frase"

[node name="Frase" type="Label" parent="."]
margin_left = 513.0
margin_top = 245.0
margin_right = 912.0
margin_bottom = 342.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
